# asv_spyglass

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pixi.toml  pyproject.toml  tbump.toml
.github/workflows/: build_test.yml  pre_commit.yml
docs/source/: index.md  usage.md
src/asv_spyglass/: __init__.py  _asv_ro.py  _aux.py  _num.py  changes.py  cli.py  compare.py  inventory.py  results.py  sbom_diff.py
tests/: test_inventory.py  test_num.py  test_results.py  test_ro.py  test_ro.test_ro_benchmarks.approved.txt  test_ro.test_ro_benchmarks_filter.approved.txt
tests/approved_files/: test_results.test_do_compare.approved.txt  test_results.test_do_compare_many_approval.approved.txt  test_results.test_do_compare_split.approved.txt  test_results.test_result_df.approved.txt
tests/data/: a0f29428-conda-py3.11.json  a0f29428-virtualenv-py3.12-numpy.json  a0f29428-virtualenv-py3.12.json  asv_samples_a0f29428_benchmarks.json  synthetic_env_pins_numpy126.json
